--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "openai": "^4.56.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
