--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
+    "express": "^4.19.2",
     "next": "14.2.6",
     "openai": "^4.56.0",
+    "puppeteer": "^23.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1"
